with token fetch

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -47,5 +47,5 @@ html(lang='en')
         div(class='col-sm-10')
     a(style='font-size: 20px; margin-top: 30px' href='/') Home
     br
-    a(style='font-size: 20px' href='/customers') All customers
+    //- a(style='font-size: 20px' href='/customers') All customers
     block content
