--- a/views/buy_token_form.pug
+++ b/views/buy_token_form.pug
@@ -11,9 +11,14 @@ block content
   div(style='margin-left:5%')
     form(method='POST' action='')
       div.form-group
+        label(for='customer-name') Name:
+        input#customer-name.form-control(type='text' placeholder='Enter name' name='name' required='true' value='')
+       
         label(for='phone_number') Phone number:
-        input#phone_number.form-control(type='text' placeholder='Enter phone number' name='phone-number' required='true' value='')
+        input#phone_number.form-control(type='test' placeholder='Enter phone number' name='phone' required='true' value='')
+        
         label(for='units') Units:
         input#units.form-control(type='text' placeholder='Enter units' name='units' required='true' value='')
+      
       button.btn.btn-primary(type='submit') Submit
   
