--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,6 +28,30 @@ html(lang='en')
         color: #333300;
         text-decoration: none;
       }
+      .table, tr, th {
+        text-align: center;
+        color: #663300;
+        background-color: #99ccff;
+      }
+      .table, tr, td {
+        text-align: center;
+        background-color: white;
+        border: 2;
+        text-align: center;
+      }
+      .delete-btn {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        background-color: red;
+        margin-left: 42%;
+        color: white;
+        font-size: 20px;
+        margin-top: 40px;
+        border-radius: 4px;
+        text-decoration: none;
+      }
     //- link(rel="stylesheet", href="../public/stylesheets/style.css")
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css", integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z", crossorigin="anonymous")
     script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
